fixed one or two things on the type ahead, but something is broken on the style side

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,4 +171,14 @@ img#logo {
   margin: 0 20px 5px 20px;
   padding: 3px 0;
   border-bottom: 1px solid #ccc;
+  width: 100;
+  background-color: #DDDDDD;
+  font-weight: bolder;
+
 }
+.tt-menu {  
+  z-index: 5051;
+  background-color: white;
+  border: 2px solid #DDDDDD;
+  }
+
